--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-ismrmrd (1.2.1-1) UNRELEASED; urgency=low
+ismrmrd (1.2.1-3) trusty; urgency=medium
 
-  * Initial release (Closes: #732360)
+  * Initial release. (Closes: #XXXXXX)
 
- -- Dusan Puletic <dusan.puletic@nih.gov>  Fri, 11 Feb 2015 15:29:55 +0000
+ -- Dusan Puletic <dusan.puletic@nih.gov>  Tue, 17 Feb 2015 17:17:30 +0000
